# autel-fw-parser

./: Cargo.toml  README.md
src/: display.rs  file_entry.rs  file_types.rs  main.rs  parser.rs  processor.rs  zip_utils.rs
