[package]
name = "firmparse"
version = "0.1.0"
edition = "2021"

# Authors and other optional metadata
authors = ["Tim Strazzere <tim@strazzere.com"]
description = "Parsing autel firmwares"
license = "MIT"
repository = "https://github.com/your/repository"

[dependencies]
serde_json = "1.0.140"
zip = "2.5.0"